--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-google-charts": "^4.0.1",
     "react-icons": "^5.2.1",
+    "react-player": "^2.16.0",
     "react-scripts": "5.0.1",
     "react-switch": "^7.0.0",
     "react-transition-group": "^4.4.5",
