--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "vizgenius",
+  "homepage": "http://kostantinostheo.github.io/vizginius",
+  "name": "vizginius",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -25,6 +26,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -48,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.1.1",
     "react-router-dom": "^6.23.1",
     "tailwindcss": "^3.4.4"
   }
