--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.2.1",
     "react-player": "^2.16.0",
     "react-scripts": "5.0.1",
+    "react-scroll-to-top": "^3.0.0",
     "react-switch": "^7.0.0",
     "react-transition-group": "^4.4.5",
     "web-vitals": "^2.1.4"
